<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_editor_coord"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


...

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textCapSentences"
                android:ems="10"
                android:id="@+id/first_edit"/>

    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
...

             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords|textCapSentences"
                 android:ems="10"
                 android:id="@+id/last_edit"/>

     </LinearLayout>

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textCapSentences"
        android:ems="10"
        android:id="@+id/country_edit"/>

    <TextView
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender_text"
...
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <RadioButton
                android:id="@+id/female_radioButton"
                android:text="@string/female"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <RadioButton
                android:layout_toEndOf="@+id/female_radioButton"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male_radioButton"/>

            <RadioButton
                android:id="@+id/unkown_radioButton"
                android:text="@string/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

...
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:src="@drawable/ic_clear_black_24dp"
        android:scaleType="center"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:src="@drawable/ic_mic_black_24dp"
        android:scaleType="center"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_black_24dp"
        android:scaleType="center"/>
...
