...
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/contactList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:layout_anchor="@id/contactList"
                app:layout_anchorGravity="bottom|right|end"
...
