...

    <string name="keepNamePronunciation">Do you want to keep the generic name pronunciation in relation to the country?</string>
    <string name="emptyNameRecordError">You can\'t record for an empty name.</string>
    <string name="contactDeleted">Deleted a contact</string>
    <string name="contactRestored">Restored a contact</string>
    <string name="contactEdited">Edited a contact</string>
    <string name="UNDO">UNDO</string>
    <string name="about_to_delete">Delete</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <!--Notifications-->

    <!--Filter-->

    <string name="country_enabled_radioButton">on</string>
...
