<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_viewer_coord"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

...


    <TextView
        android:text="blablabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/real_first_name"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:textSize="18sp"/>

    <TextView
        android:text="blablabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/real_last_name"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:textSize="18sp"/>

    <TextView
        android:text="blablabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/real_title"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:textSize="18dp"/>

    <TextView
        android:text="blablabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/real_country"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender_text"
        android:textSize="18sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender_sign" />

    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:src="@drawable/delete_icon"
            android:scaleType="center"/>
...
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:scaleType="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/edit_icon"
            android:scaleType="center"/>
...
